--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -2,7 +2,9 @@
   "sample": "샘플",
   "grid": {
     "title": "제목",
-    "insertDate":"등록일"
+    "insertDate":"등록일",
+    "useFlag": "사용여부",
+    "sortSeq": "정렬"
   },
   "contextMenu": {
     "copy": "복사",
@@ -11,5 +13,22 @@
     "export": "내보내기",
     "csvExport": "CSV로 내보내기",
     "excelExport": "엑셀로 내보내기"
+  },
+  "page": {
+    "code": {
+       "column": {
+         "001": "대분류코드",
+         "002": "대분류명",
+         "003": "사용모듈",
+         "010": "소분류코드",
+         "011": "소분류명",
+         "012": "비고",
+         "013": "Option1",
+         "014": "Option2",
+         "015": "Option3",
+         "016": "Option4",
+         "017": "Option5"
+       }
+    }
   }
 }
