--- a/i18n/vi.json
+++ b/i18n/vi.json
@@ -3,7 +3,8 @@
   "grid": {
     "title": "제목(베)",
     "insertDate":"등록일(베)",
-    "useFlag": "사용여부(베)"
+    "useFlag": "사용여부(베)",
+    "sortSeq": "정렬(베)"
   },
   "contextMenu": {
     "copy": "Copy(베)",
@@ -18,7 +19,15 @@
       "column": {
         "001": "대분류코드(베)",
         "002": "대분류명(베)",
-        "003": "사용모듈(베)"
+        "003": "사용모듈(베)",
+        "010": "소분류코드(베)",
+        "011": "소분류명(베)",
+        "012": "비고(베)",
+        "013": "Option1(베)",
+        "014": "Option2(베)",
+        "015": "Option3(베)",
+        "016": "Option4(베)",
+        "017": "Option5(베)"
       }
     }
   }
