page 다국어 정리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -41,6 +41,39 @@
   },
   "page": {
     "system": {
+      "00001": "회사",
+      "00002": "권한코드",
+      "00003": "권한명",
+      "00004": "사용여부",
+      "00005": "권한그룹",
+      "00006": "권한그룹상세",
+      "00007": "신규권한 생성",
+      "00008": "Default 권한",
+      "00009": "비고",
+      "00010": "권한그룹별 담당",
+      "00011": "사용자추가",
+      "00012": "삭제",
+      "00013": "메뉴그룹",
+      "00014": "메뉴목록",
+      "00015": "프로그램설정",
+      "00017": "공통코드유형",
+      "00018": "대분류코드",
+      "00019": "대분류명",
+      "00020": "소분류명",
+      "00021": "대분류",
+      "00022": "대분류상세",
+      "00023": "신규 코드",
+      "00024": "공통코드유형",
+      "00025": "소분류",
+      "00026": "추가",
+      "00027": "프로그램설정",
+      "00028": "메뉴아이콘",
+      "00029": "프로그램명",
+      "00030": "메뉴코드",
+      "00031": "App메뉴코드",
+      "00032": "권한그룹 설정",
+      "00033": "메뉴명",
+      "00034": "프로그램"
 
     }
   },
