components 다국어 처리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -87,5 +87,13 @@
     "00007": "Grid 입력값을 확인하세요.",
     "00008": "권한그룹을 선택하세요",
     "00009": "{count}명이 추가되었습니다."
+  },
+  "components": {
+     "ui": {
+       "00001": "조회",
+       "00002": "저장",
+       "00003": "삭제",
+       "00004": "선택하세요"
+     }
   }
 }
