component > modal  다국어 처리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -94,6 +94,16 @@
        "00002": "저장",
        "00003": "삭제",
        "00004": "선택하세요"
-     }
+     },
+    "modal": {
+      "00001": "사용자조회",
+      "00002": "조회",
+      "00003": "확인",
+      "00004": "닫기",
+      "00005": "부서",
+      "00006": "로그인아이디",
+      "00007": "사용자명"
+
+    }
   }
 }
