--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -1,35 +1,35 @@
 {
   "sample": "샘플",
   "grid": {
-    "title": "제목",
-    "insertDate":"등록일",
-    "useFlag": "사용여부",
-    "sortSeq": "정렬",
+    "authCheckFlag": "권한체크",
+    "authGroupId": "권한코드",
+    "authName": "권한명",
+    "biznum": "사업자번호",
     "coId": "회사",
     "codeGroupId": "대분류코드",
     "codeGroupName": "대분류명",
-    "systemCodeType": "사용모듈",
     "codeId": "소분류코드",
     "codeDesc": "비고",
+    "coName": "회사명",
+    "delAuth": "삭제",
+    "deptName": "부서명",
+    "defaultAuthFlag": "기본권한",
+    "excelAuth": "엑셀",
+    "insertDate":"등록일",
+    "inqryAuth": "조회'",
+    "loginId": "로그인ID",
+    "menuName": "메뉴명",
     "progName": "프로그램명",
     "progPath": "경로",
-    "authCheckFlag": "권한체크",
-    "inqryAuth": "조회'",
-    "saveAuth": "저장",
-    "excelAuth": "엑셀",
-    "delAuth": "삭제",
-    "remark": "비고",
-    "authGroupId": "권한코드",
-    "authName": "권한명",
-    "defaultAuthFlag": "기본권한",
-    "loginId": "로그인ID",
-    "userName": "사용자명",
-    "deptName": "부서명",
     "pos": "직급",
-    "menuName": "메뉴명",
-    "coName": "회사명",
-    "biznum": "사업자번호",
-    "repName": "대표자명"
+    "remark": "비고",
+    "repName": "대표자명",
+    "saveAuth": "저장",
+    "sortSeq": "정렬",
+    "systemCodeType": "사용모듈",
+    "title": "제목",
+    "useFlag": "사용여부",
+    "userName": "사용자명"
   },
   "contextMenu": {
     "copy": "복사",
