사용자로그관리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -22,6 +22,7 @@
     "progName": "프로그램명",
     "progPath": "경로",
     "pos": "직급",
+    "regDtm": "등록일시",
     "remark": "비고",
     "repName": "대표자명",
     "saveAuth": "저장",
@@ -73,8 +74,8 @@
       "00031": "App메뉴코드",
       "00032": "권한그룹 설정",
       "00033": "메뉴명",
-      "00034": "프로그램"
-
+      "00034": "프로그램",
+      "00035": "사용자명"
     }
   },
   "message": {
