로그인로그

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -15,6 +15,7 @@
     "deptName": "부서명",
     "defaultAuthFlag": "기본권한",
     "excelAuth": "엑셀",
+    "failReasonCode":"로그인실패",
     "insertDate":"등록일",
     "inqryAuth": "조회'",
     "loginId": "로그인ID",
@@ -105,6 +106,18 @@
       "00006": "로그인아이디",
       "00007": "사용자명"
 
+    }
+  },
+  "err": {
+    "login": {
+      "01": "로그인정보가 존재하지 않습니다.",
+      "02": "아이디 또는 비밀번호가 일치 하지 않습니다.",
+      "03": "로그인 오류 횟수 초과입니다.",
+      "04": "현재 비밀번호를 확인해주세요.",
+      "05": "장기미접속 계정입니다.",
+      "06": "접속불가 IP입니다.",
+      "07": "로그인 처리시 오류가 발생 했습니다.",
+      "08": "권한 정보가 없습니다."
     }
   }
 }
