다국어 미변경분 처리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -76,7 +76,9 @@
       "00032": "권한그룹 설정",
       "00033": "메뉴명",
       "00034": "프로그램",
-      "00035": "사용자명"
+      "00035": "사용자명",
+      "00036": "사용자로그",
+      "00037": "로그인로그"
     }
   },
   "message": {
