시스템관리 > 기준정보관리 > 회사 / 부서 / 사용자 관리 : 다국어 적용

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -78,7 +78,45 @@
       "00034": "프로그램",
       "00035": "사용자명",
       "00036": "사용자로그",
-      "00037": "로그인로그"
+      "00037": "로그인로그",
+      "00038": "회사 상세",
+      "00039": "신규 회사",
+      "00040": "사업자번호",
+      "00041": "법인번호",
+      "00042": "대표자명",
+      "00043": "담당자 이메일",
+      "00044": "회사 전화",
+      "00045": "회사 FAX",
+      "00046": "설립일",
+      "00047": "업태",
+      "00048": "종목",
+      "00049": "언어",
+      "00050": "정렬",
+      "00051": "주소",
+      "00052": "영문주소",
+      "00053": "코드약어",
+      "00054": "로고파일명",
+      "00055": "부서목록",
+      "00056": "부서 상세",
+      "00057": "부서코드",
+      "00058": "부서명",
+      "00059": "부서",
+      "00060": "이름",
+      "00061": "사용자목록",
+      "00062": "사용자정보",
+      "00063": "신규 사용자",
+      "00064": "아이디",
+      "00065": "사용자 영문명",
+      "00066": "비밀번호",
+      "00067": "비밀번호 확인",
+      "00068": "이메일",
+      "00069": "휴대폰번호",
+      "00070": "직위",
+      "00071": "직책",
+      "00072": "시스템유형",
+      "00073": "계정상태",
+      "00074": "회사코드",
+      "00075": "회사명"
     }
   },
   "message": {
