시스템관리 > 기준정보관리 > 회사 / 부서 / 사용자 관리 : 다국어 메세지 적용

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -128,7 +128,10 @@
     "00006": "메뉴를 선택하세요",
     "00007": "Grid 입력값을 확인하세요.",
     "00008": "권한그룹을 선택하세요",
-    "00009": "{count}명이 추가되었습니다."
+    "00009": "{count}명이 추가되었습니다.",
+    "00010": "부서를 선택하세요.",
+    "00011": "삭제 할 부서를 체크하세요.",
+    "00012": "동일한 아이디가 존재합니다."
   },
   "components": {
      "ui": {
