시스템관리 > 권한관리 > 권한마스터 : 다국어 변경

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -53,7 +53,7 @@
       "00007": "신규권한 생성",
       "00008": "Default 권한",
       "00009": "비고",
-      "00010": "권한그룹별 담당",
+      "00010": "권한그룹별 사용자",
       "00011": "사용자추가",
       "00012": "삭제",
       "00013": "메뉴그룹",
