시스템관리 > 권한관리 > 권한별메뉴

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -117,7 +117,9 @@
       "00072": "시스템유형",
       "00073": "계정상태",
       "00074": "회사코드",
-      "00075": "회사명"
+      "00075": "회사명",
+      "00076": "메뉴 별 권한",
+      "00077": "메뉴그룹"
     }
   },
   "message": {
