--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -121,7 +121,12 @@
       "00074": "회사코드",
       "00075": "회사명",
       "00076": "메뉴 별 권한",
-      "00077": "메뉴그룹"
+      "00077": "메뉴그룹",
+      "00078": "알림양식",
+      "00079": "알림양식 상세",
+      "00080": "알림코드",
+      "00081": "알림명",
+      "00082": "제목"
     }
   },
   "message": {
