1. 시스템관리 > 기준정보관리 > 알림전송관리 2. validation 수정

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -47,7 +47,9 @@
     "pushSentFlag": "푸시전송",
     "emailInqryFlag": "메일읽음",
     "pushInqryFlag": "푸시읽음",
-    "systemType": "시스템유형"
+    "systemType": "시스템유형",
+    "modDtm": "수정일",
+    "modUserName": "수정자"
   },
   "contextMenu": {
     "copy": "복사",
@@ -140,7 +142,12 @@
       "00080": "알림코드",
       "00081": "알림명",
       "00082": "제목",
-      "00083": "전송일자"
+      "00083": "전송일자",
+      "00084": "전송목록",
+      "00085": "미전송건 전송",
+      "00086": "전송취소",
+      "00087": "메일대상",
+      "00088": "푸시대상"
     }
   },
   "message": {
