1. Selectbox disabled 옵션 추가

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -18,7 +18,7 @@
     "excelAuth": "엑셀",
     "failReasonCode":"로그인실패",
     "insertDate":"등록일",
-    "inqryAuth": "조회'",
+    "inqryAuth": "조회",
     "loginId": "로그인ID",
     "menuName": "메뉴명",
     "progName": "프로그램명",
