시스템관리 > 기준정보관리 > 알림양식관리 : 등록/수정 시 Grid --> Form 변경

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -147,7 +147,9 @@
       "00085": "미전송건 전송",
       "00086": "전송취소",
       "00087": "메일대상",
-      "00088": "푸시대상"
+      "00088": "푸시대상",
+      "00089": "신규 양식",
+      "00090": "내용"
     }
   },
   "message": {
