시스템관리 > 권한관리 > APP사용권한관리 : 신규 생성

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -49,7 +49,9 @@
     "pushInqryFlag": "푸시읽음",
     "systemType": "시스템유형",
     "modDtm": "수정일",
-    "modUserName": "수정자"
+    "modUserName": "수정자",
+    "applnUseFlag": "APP사용",
+    "pdaUseFlag": "PDA사용"
   },
   "contextMenu": {
     "copy": "복사",
