다국어 국기 표기

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -182,8 +182,8 @@
       "00004": "닫기",
       "00005": "부서",
       "00006": "로그인아이디",
-      "00007": "사용자명"
-
+      "00007": "사용자명",
+      "00008": "스케줄관리"
     }
   },
   "err": {
