스케줄 등록 / 수정 / 삭제 / 정지 / 시작 / 수동실행

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -183,7 +183,13 @@
       "00005": "부서",
       "00006": "로그인아이디",
       "00007": "사용자명",
-      "00008": "스케줄관리"
+      "00008": "스케줄관리",
+      "00009": "저장",
+      "00010": "시작",
+      "00011": "일시중지",
+      "00012": "실행",
+      "00013": "삭제",
+      "00014": "ex.<br> 0 0/5 * * * ? : 5분 마다 실행<br> 0 15 10 * * ? : 매일 10시 15분에 실행<br>0 0 0 1 * ? : 매월 1일 마다 실행<br>0 15 10 L * ? : 매월 말일 10:15분에 실행<br>"
     }
   },
   "err": {
