--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -54,7 +54,8 @@
     "lastUpdateFlag": "최종",
     "updateId": "업데이트코드",
     "appType": "업데이트유형",
-    "cntn": "내용"
+    "cntn": "내용",
+    "sndrName": "발신자명"
   },
   "contextMenu": {
     "copy": "복사",
@@ -198,7 +199,12 @@
       "00011": "일시중지",
       "00012": "실행",
       "00013": "삭제",
-      "00014": "ex.<br> 0 0/5 * * * ? : 5분 마다 실행<br> 0 15 10 * * ? : 매일 10시 15분에 실행<br>0 0 0 1 * ? : 매월 1일 마다 실행<br>0 15 10 L * ? : 매월 말일 10:15분에 실행<br>"
+      "00014": "ex.<br> 0 0/5 * * * ? : 5분 마다 실행<br> 0 15 10 * * ? : 매일 10시 15분에 실행<br>0 0 0 1 * ? : 매월 1일 마다 실행<br>0 15 10 L * ? : 매월 말일 10:15분에 실행<br>",
+      "00015": "알림현황",
+      "00016": "발신자ID",
+      "00017": "발신자명",
+      "00018": "발신자이메일",
+      "00019": "읽음"
     }
   },
   "err": {
