메뉴: 폴더/메뉴 구분 처리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -161,7 +161,8 @@
       "00093": "버전",
       "00094": "파일첨부",
       "00095": "APP 업데이트 목록",
-      "00096": "신규 업데이트"
+      "00096": "신규 업데이트",
+      "00097": "폴더여부"
     }
   },
   "message": {
