다국어 추가

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -162,7 +162,10 @@
       "00094": "파일첨부",
       "00095": "APP 업데이트 목록",
       "00096": "신규 업데이트",
-      "00097": "폴더여부"
+      "00097": "폴더여부",
+      "00098": "경로",
+      "00099": "프로그램코드",
+      "00100": "프로그램도움말"
     }
   },
   "message": {
