프로그램 도움말 모달창 생성

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -210,7 +210,9 @@
       "00016": "발신자ID",
       "00017": "발신자명",
       "00018": "발신자이메일",
-      "00019": "읽음"
+      "00019": "읽음",
+      "00020": "프로그램도움말",
+      "00021": "첨부파일"
     }
   },
   "err": {
