도움말 링크 처리 및 등록된 도움말 없는 경우 처리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -182,7 +182,8 @@
     "00009": "{count}명이 추가되었습니다.",
     "00010": "부서를 선택하세요.",
     "00011": "삭제 할 부서를 체크하세요.",
-    "00012": "동일한 아이디가 존재합니다."
+    "00012": "동일한 아이디가 존재합니다.",
+    "00013": "등록된 도움말이 없습니다."
   },
   "components": {
      "ui": {
