시스템관리 : Form 위치 조정

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -167,7 +167,8 @@
       "00098": "경로",
       "00099": "프로그램코드",
       "00100": "프로그램도움말",
-      "00101": "사용모듈"
+      "00101": "사용모듈",
+      "00102": "APP 업데이트 정보"
     }
   },
   "message": {
