시스템관리 > 알림양식관리 / 알림수신자관리 / 알림전송관리 : 알림코드 - 자동 증가값 -> 코드값(Unique String)으로 변경

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -33,7 +33,7 @@
     "title": "제목",
     "useFlag": "사용여부",
     "userName": "사용자명",
-    "notifyTmpltId": "알림코드",
+    "notifyTmpltCode": "알림코드",
     "notifyTmpltName": "알림명",
     "notifyId": "일련번호",
     "sndrId": "발신자",
@@ -184,7 +184,8 @@
     "00010": "부서를 선택하세요.",
     "00011": "삭제 할 부서를 체크하세요.",
     "00012": "동일한 아이디가 존재합니다.",
-    "00013": "등록된 도움말이 없습니다."
+    "00013": "등록된 도움말이 없습니다.",
+    "00014": "동일한 알림코드가 존재합니다."
   },
   "components": {
      "ui": {
