min_selections rule 다국어 처리

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -228,6 +228,9 @@
       "06": "접속불가 IP입니다.",
       "07": "로그인 처리시 오류가 발생했습니다.",
       "08": "권한 정보가 없습니다."
+    },
+    "validate": {
+      "01": "최소 {min}개 이상 선택해주세요."
     }
   }
 }
