--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -168,7 +168,8 @@
       "00099": "프로그램코드",
       "00100": "프로그램도움말",
       "00101": "사용모듈",
-      "00102": "APP 업데이트 정보"
+      "00102": "APP 업데이트 정보",
+      "00103": "첨부파일"
     }
   },
   "message": {
