공통/로그인/공통코드까지 완료

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -8,7 +8,6 @@
     "coId": "회사",
     "codeGroupId": "대분류코드",
     "codeGroupName": "대분류명",
-    "codeId": "소분류코드",
     "codeName": "소분류명",
     "codeDesc": "비고",
     "coName": "회사명",
@@ -38,6 +37,7 @@
     "notifyId": "일련번호",
     "sndrId": "발신자",
     "sndrEmail": "발신메일주소",
+    "subCode": "소분류코드",
     "rcvrId": "수신자",
     "rcvrEmail": "수신메일주소",
     "emailFlag": "메일대상",
