메뉴관리 완료

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -169,7 +169,8 @@
       "00100": "프로그램도움말",
       "00101": "사용모듈",
       "00102": "APP 업데이트 정보",
-      "00103": "첨부파일"
+      "00103": "첨부파일",
+      "00104": "사업장"
     }
   },
   "message": {
