--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -174,7 +174,8 @@
       "00101": "사용모듈",
       "00102": "APP 업데이트 정보",
       "00103": "첨부파일",
-      "00104": "사업장"
+      "00104": "사업장",
+      "00105": "새메뉴"
     }
   },
   "message": {
@@ -191,7 +192,8 @@
     "00011": "삭제 할 부서를 체크하세요.",
     "00012": "동일한 아이디가 존재합니다.",
     "00013": "등록된 도움말이 없습니다.",
-    "00014": "동일한 알림코드가 존재합니다."
+    "00014": "동일한 알림코드가 존재합니다.",
+    "00015": "메뉴를 입력중입니다."
   },
   "components": {
      "ui": {
