--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -4,6 +4,8 @@
     "authCheckFlag": "권한체크",
     "authGroupCode": "권한코드",
     "authName": "권한명",
+    "applnUseFlag": "APP사용",
+    "appType": "업데이트유형",
     "biznum": "사업자번호",
     "bsnsId": "사업장",
     "bsnsName": "사업장명",
@@ -14,53 +16,53 @@
     "codeName": "소분류명",
     "codeDesc": "비고",
     "coName": "회사명",
+    "cntn": "내용",
     "delAuth": "삭제",
+    "deptCode":"부서코드",
     "deptName": "부서명",
     "defaultAuthFlag": "기본권한",
     "excelAuth": "엑셀",
+    "emailFlag": "메일대상",
+    "emailSentFlag": "메일전송",
+    "emailInqryFlag": "메일읽음",
     "failReasonCode":"로그인실패",
     "insertDate":"등록일",
     "inqryAuth": "조회",
+    "lastUpdateFlag": "최종",
     "loginId": "로그인ID",
     "menuName": "메뉴명",
     "menuCode": "메뉴코드",
+    "modDtm": "수정일",
+    "moduleCodeType": "사용모듈",
+    "modUserName": "수정자",
+    "notifyTmpltCode": "알림코드",
+    "notifyTmpltName": "알림명",
+    "notifyId": "일련번호",
     "progName": "프로그램명",
     "progPath": "경로",
     "pos": "직급",
+    "pushFlag": "푸시대상",
+    "pushSentFlag": "푸시전송",
+    "pushInqryFlag": "푸시읽음",
+    "pdaUseFlag": "PDA사용",
     "regDtm": "등록일시",
     "remark": "비고",
+    "rcvrId": "수신자",
+    "rcvrEmail": "수신메일주소",
     "repName": "대표자명",
     "saveAuth": "저장",
     "sortSeq": "정렬",
     "systemCodeType": "공통코드유형",
+    "sndrId": "발신자",
+    "sndrEmail": "발신메일주소",
+    "sndrName": "발신자명",
+    "subCode": "소분류코드",
+    "systemType": "시스템유형",
     "title": "제목",
     "useFlag": "사용여부",
     "userName": "사용자명",
-    "notifyTmpltCode": "알림코드",
-    "notifyTmpltName": "알림명",
-    "notifyId": "일련번호",
-    "sndrId": "발신자",
-    "sndrEmail": "발신메일주소",
-    "subCode": "소분류코드",
-    "rcvrId": "수신자",
-    "rcvrEmail": "수신메일주소",
-    "emailFlag": "메일대상",
-    "pushFlag": "푸시대상",
-    "emailSentFlag": "메일전송",
-    "pushSentFlag": "푸시전송",
-    "emailInqryFlag": "메일읽음",
-    "pushInqryFlag": "푸시읽음",
-    "systemType": "시스템유형",
-    "modDtm": "수정일",
-    "moduleCodeType": "사용모듈",
-    "modUserName": "수정자",
-    "applnUseFlag": "APP사용",
-    "pdaUseFlag": "PDA사용",
-    "lastUpdateFlag": "최종",
-    "updateId": "업데이트코드",
-    "appType": "업데이트유형",
-    "cntn": "내용",
-    "sndrName": "발신자명"
+    "updateId": "업데이트코드"
+
   },
   "contextMenu": {
     "copy": "복사",
