영문회사명 누락 추가

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -178,7 +178,8 @@
       "00103": "첨부파일",
       "00104": "사업장",
       "00105": "새메뉴",
-      "00106": "새부서"
+      "00106": "새부서",
+      "00107": "영문회사명"
     }
   },
   "message": {
