사업장관리 > grid api 수정

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -9,6 +9,7 @@
     "biznum": "사업자번호",
     "bsnsId": "사업장",
     "bsnsName": "사업장명",
+    "bsnsCode":"사업장코드",
     "coId": "회사",
     "coCode": "회사코드",
     "codeGroupId": "대분류코드",
@@ -179,7 +180,10 @@
       "00104": "사업장",
       "00105": "새메뉴",
       "00106": "새부서",
-      "00107": "영문회사명"
+      "00107": "영문회사명",
+      "00108": "사업장코드",
+      "00109": "사업장명",
+      "00110": "사업장상세"
     }
   },
   "message": {
