사업장관리 > 폼관련 api 수정

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -26,6 +26,7 @@
     "emailFlag": "메일대상",
     "emailSentFlag": "메일전송",
     "emailInqryFlag": "메일읽음",
+    "enBsnsName" : "영문사업자명",
     "failReasonCode":"로그인실패",
     "insertDate":"등록일",
     "inqryAuth": "조회",
@@ -63,7 +64,6 @@
     "useFlag": "사용여부",
     "userName": "사용자명",
     "updateId": "업데이트코드"
-
   },
   "contextMenu": {
     "copy": "복사",
@@ -183,7 +183,12 @@
       "00107": "영문회사명",
       "00108": "사업장코드",
       "00109": "사업장명",
-      "00110": "사업장상세"
+      "00110": "사업장상세",
+      "00111": "영문사업장명",
+      "00112": "사업장전화",
+      "00113": "사업장FAX",
+      "00114": "개업일자",
+      "00115": "신규사업장"
     }
   },
   "message": {
