1. 컴포넌트 3가지 추가 (SJTab,SJAccordion,SJFileUpload2) 2. test 페이지 생성

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -215,7 +215,8 @@
        "00002": "저장",
        "00003": "삭제",
        "00004": "선택하세요",
-       "00005": "첨부파일"
+       "00005": "첨부파일",
+       "00006": "대용량"
      },
     "modal": {
       "00001": "사용자조회",
