창고관리 api 생성

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -6,6 +6,7 @@
     "authName": "권한명",
     "applnUseFlag": "APP사용",
     "appType": "업데이트유형",
+    "availInvntryFlag": "가용재고",
     "biznum": "사업자번호",
     "bsnsId": "사업장",
     "bsnsName": "사업장명",
@@ -18,6 +19,7 @@
     "codeDesc": "비고",
     "coName": "회사명",
     "cntn": "내용",
+    "customer": "거래처",
     "delAuth": "삭제",
     "deptCode":"부서코드",
     "deptName": "부서명",
@@ -35,11 +37,13 @@
     "menuName": "메뉴명",
     "menuCode": "메뉴코드",
     "modDtm": "수정일",
+    "modUserId": "담당부서",
     "moduleCodeType": "사용모듈",
     "modUserName": "수정자",
     "notifyTmpltCode": "알림코드",
     "notifyTmpltName": "알림명",
     "notifyId": "일련번호",
+    "osdWhseFlag": "사외창고",
     "progName": "프로그램명",
     "progPath": "경로",
     "pos": "직급",
@@ -48,11 +52,15 @@
     "pushInqryFlag": "푸시읽음",
     "pdaUseFlag": "PDA사용",
     "regDtm": "등록일시",
+    "respDeptId": "담당부서",
+    "regUserId": "등록사용자아이디",
+    "regUserName": "등록사용자명",
     "remark": "비고",
     "rcvrId": "수신자",
     "rcvrEmail": "수신메일주소",
     "repName": "대표자명",
     "saveAuth": "저장",
+    "sort": "정렬",
     "sortSeq": "정렬",
     "systemCodeType": "공통코드유형",
     "sndrId": "발신자",
@@ -63,7 +71,11 @@
     "title": "제목",
     "useFlag": "사용여부",
     "userName": "사용자명",
-    "updateId": "업데이트코드"
+    "updateId": "업데이트코드",
+    "whseCode": "창고코드",
+    "whseId": "창고아이디",
+    "whseName": "창고명",
+    "whseType":"창고유형"
   },
   "contextMenu": {
     "copy": "복사",
@@ -141,6 +153,7 @@
       "00065": "사용자 영문명",
       "00066": "비밀번호",
       "00067": "비밀번호 확인",
+      "00068": "이메일",
       "00068": "이메일",
       "00069": "휴대폰번호",
       "00070": "직위",
