창고관리 page수정

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -179,6 +179,7 @@
       "00090": "내용",
       "00091": "업데이트유형",
       "00092": "업데이트코드",
+      "00092": "업데이트코드",
       "00093": "버전",
       "00094": "파일첨부",
       "00095": "APP 업데이트 목록",
@@ -202,6 +203,19 @@
       "00113": "사업장FAX",
       "00114": "개업일자",
       "00115": "신규사업장"
+    },
+    "master": {
+      "00001": "창고유형",
+      "00002": "창고코드",
+      "00003": "창고명",
+      "00004": "사용여부",
+      "00005": "자재창고",
+      "00006": "투입대기창고",
+      "00007": "제품창고",
+      "00008": "생산창고",
+      "00009": "추가",
+      "00010": "삭제",
+      "00011": "창고"
     }
   },
   "message": {
