창고관리 수정

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -60,7 +60,7 @@
     "rcvrEmail": "수신메일주소",
     "repName": "대표자명",
     "saveAuth": "저장",
-    "sort": "정렬",
+    "sort": "우선순위",
     "sortSeq": "정렬",
     "systemCodeType": "공통코드유형",
     "sndrId": "발신자",
@@ -154,7 +154,6 @@
       "00066": "비밀번호",
       "00067": "비밀번호 확인",
       "00068": "이메일",
-      "00068": "이메일",
       "00069": "휴대폰번호",
       "00070": "직위",
       "00071": "직책",
@@ -178,7 +177,6 @@
       "00089": "신규 양식",
       "00090": "내용",
       "00091": "업데이트유형",
-      "00092": "업데이트코드",
       "00092": "업데이트코드",
       "00093": "버전",
       "00094": "파일첨부",
